Added TPM and plugins

--- a/tmux.conf
+++ b/tmux.conf
@@ -39,17 +39,18 @@ bind-key C-a last-pane
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
 
 # List of plugins
-# Supports `github_username/repo` or full git repo URLs
-set -g @tpm_plugins '              \
-  tmux-plugins/tpm                 \
-  tmux-plugins/tmux-resurrect      \
-  tmux-plugins/tmux-continuum      \
-'
-# Other examples:
-# github_username/plugin_name    \
-# git@github.com/user/plugin     \
-# git@bitbucket.com/user/plugin  \
+set -g @plugin 'tmux-plugins/tpm' # Tmux package manager
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-open' # Open highlighted selection directly from Tmux
+set -g @plugin 'tmux-plugins/tmux-resurrect' # Restore previous sessions on reboot
+set -g @plugin 'tmux-plugins/tmux-continuum' # Restore previous sessions on reboot
 
-# Initializes TMUX plugin manager.
+# How to install other plugins from Github:
+# To install new plugins press: prefix + I
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initializes Tmux plugin manager.
 # Keep this line at the very bottom of tmux.conf.
 run-shell '~/.tmux/plugins/tpm/tpm'
