Updated Status Bar
- New plugin to handle battery indicator
- Changed status colors

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,19 +21,44 @@ set-window-option -g pane-base-index 1
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
-# soften status bar color from harsh green to light gray
-set -g status-bg '#666666'
-set -g status-fg '#aaaaaa'
-
-# remove administrative debris (session name, hostname, time) in status bar
-set -g status-left ''
-set -g status-right ''
-
 # increase scrollback lines
 set -g history-limit 10000
 
 # switch to last pane
 bind-key C-a last-pane
+
+
+# Status Bar ---------------------
+#
+# soften status bar colors
+set -g status-bg '#586e75'
+set -g status-fg '#eee8d5'
+# More colors from Solarized
+# $base03:    #002b36;
+# $base02:    #073642;
+# $base01:    #586e75;
+# $base00:    #657b83;
+# $base0:     #839496;
+# $base1:     #93a1a1;
+# $base2:     #eee8d5;
+# $base3:     #fdf6e3;
+# $yellow:    #b58900;
+# $orange:    #cb4b16;
+# $red:       #dc322f;
+# $magenta:   #d33682;
+# $violet:    #6c71c4;
+# $blue:      #268bd2;
+# $cyan:      #2aa198;
+# $green:     #859900;
+
+# remove administrative debris (session name, hostname, time) in status bar
+set -g status-left ''
+set -g status-right ''
+
+set -g status-justify centre
+set-option -g status-left-length 50
+set-option -g status-right "Battery: #{battery_icon} #{battery_percentage} #{battery_remain} | #(date '+%a, %b %d - %I:%M')"
+set -g status-left "Session: #S"
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
@@ -44,6 +69,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-open' # Open highlighted selection directly from Tmux
 set -g @plugin 'tmux-plugins/tmux-resurrect' # Restore previous sessions on reboot
 set -g @plugin 'tmux-plugins/tmux-continuum' # Restore previous sessions on reboot
+set -g @plugin 'tmux-plugins/tmux-battery' #Show battery icon/status
 
 # How to install other plugins from Github:
 # To install new plugins press: prefix + I
