Add python install to neovim setup change editor to nvim
update readme

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,25 +1,3 @@
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm' # Tmux package manager
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-open' # Open highlighted selection directly from Tmux
-set -g @plugin 'tmux-plugins/tmux-resurrect' # Restore previous sessions on reboot
-set -g @plugin 'tmux-plugins/tmux-continuum' # Restore previous sessions on reboot
-set -g @plugin 'tmux-plugins/tmux-battery' #Show battery icon/status
-
-# Tmux will auto-start on system boot
-set -g @continuum-boot 'on'
-set -g @continuum-boot-options 'iterm'
-set -g @continuum-restore 'on'
-set -g @continuum-save-interval '5'
-set -g @resurrect-strategy-vim 'session'
-set -g @resurrect-strategy-nvim 'session' #for Neo Vim
-
-# How to install other plugins from Github:
-# To install new plugins press: prefix + I
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
-
 # improve colors
 set -g default-terminal 'screen-256color'
 
@@ -51,9 +29,13 @@ bind-key C-a last-pane
 
 # Status Bar ---------------------
 #
+set -g status on
+set -g status-utf8 on
+
 # soften status bar colors
 set -g status-bg '#586e75'
 set -g status-fg '#eee8d5'
+
 # More colors from Solarized
 # $base03:    #002b36;
 # $base02:    #073642;
@@ -82,11 +64,7 @@ set-option -g status-right "Battery: #{battery_icon} #{battery_percentage} #{bat
 set -g status-left "Session: #S"
 
 #Allow mouse usage
-set -g mode-mouse on
-setw -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set -g mouse on
 
 # Shift + arrows to resize pane
 bind -n S-Left resize-pane -L 2
@@ -127,6 +105,29 @@ bind-key k confirm kill-window
 bind-key t split-window -h "vim"
 
 bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm' # Tmux package manager
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-open' # Open highlighted selection directly from Tmux
+set -g @plugin 'tmux-plugins/tmux-resurrect' # Restore previous sessions on reboot
+set -g @plugin 'tmux-plugins/tmux-continuum' # Restore previous sessions on reboot
+set -g @plugin 'tmux-plugins/tmux-battery' #Show battery icon/status
+
+# Tmux will auto-start on system boot
+set -g @continuum-boot 'on'
+set -g @continuum-boot-options 'iterm'
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '5'
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-strategy-nvim 'session' #for Neo Vim
+
+# How to install other plugins from Github:
+# To install new plugins press: prefix + I
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
 
 # Initializes Tmux plugin manager.
 # Keep this line at the very bottom of tmux.conf.
