Update tmux config to work with Tmux 2.4+

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,9 @@
 # improve colors
 set -g default-terminal 'screen-256color'
 
+# Reload config
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+
 # act like vim
 setw -g mode-keys vi
 bind h select-pane -L
@@ -68,6 +71,12 @@ bind -n S-Right resize-pane -R 2
 bind -n S-Down resize-pane -D 1
 bind -n S-Up resize-pane -U 1
 
+bind-key c new-window -c '#{pane_current_path}'
+bind-key k confirm kill-window
+
+bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
+
+# --- VIM style tmux config ----
 # smart pane switching with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
