--- a/tmux.conf
+++ b/tmux.conf
@@ -95,6 +95,7 @@ bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 bind-key h split-window -v -c '#{pane_current_path}'
 bind-key v split-window -h -c '#{pane_current_path}'
 
+bind-key ` new-session -s work
 bind-key c new-window -c '#{pane_current_path}'
 bind-key k confirm kill-window
 
