Setup overhaul for an Ubuntu machine
- Now setup will customize git user settings at install time.
- Streamlined setup to only need to run ./setup.
- Removed Ruby and serverside setup stuff, I don't care about all of that.
- Made the few tweaks I could find that were necessary to dotfiles etc for linux specific issues.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 !bin
-*.DS_store
 tmp/**/*
 !tmp/cache/.keep
 .env
@@ -13,5 +12,4 @@ atom/*
 !atom/snippets.cson
 !atom/styles.less
 
-unison/*
-!unison/Stores.prf
+gitconfig.local
