--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
+# Use the correct shell
+set-option -g default-shell /usr/bin/zsh
+
 # improve colors
 set -g default-terminal 'screen-256color'
 
@@ -59,7 +62,7 @@ set -g status-right ''
 
 set -g status-justify centre
 set-option -g status-left-length 50
-set-option -g status-right "Battery: #{battery_icon} #{battery_percentage} #{battery_remain} | #(date '+%a, %b %d - %I:%M')"
+set-option -g status-right "#(date '+%a, %b %d - %I:%M')"
 set -g status-left "Session: #S"
 
 # Shift + arrows to resize pane
@@ -110,11 +113,11 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-open' # Open highlighted selection directly from Tmux
 set -g @plugin 'tmux-plugins/tmux-resurrect' # Restore previous sessions on reboot
 set -g @plugin 'tmux-plugins/tmux-continuum' # Restore previous sessions on reboot
-set -g @plugin 'tmux-plugins/tmux-battery' #Show battery icon/status
+set -g @plugin 'tmux-plugins/tmux-yank' # Copy to system clipboard in tmux
 
 # Tmux will auto-start on system boot
 set -g @continuum-boot 'on'
-set -g @continuum-boot-options 'iterm'
+# set -g @continuum-boot-options 'iterm'
 set -g @continuum-restore 'on'
 set -g @continuum-save-interval '5'
 set -g @resurrect-strategy-vim 'session'
@@ -129,4 +132,4 @@ set -g @resurrect-strategy-nvim 'session' #for Neo Vim
 
 # Initializes Tmux plugin manager.
 # Keep this line at the very bottom of tmux.conf.
-run-shell '~/.tmux/plugins/tpm/tpm'
+run -b '~/.tmux/plugins/tpm/tpm'
