Add setup for vscode!
- Some needed tweaks for Linux / Atom

--- a/tmux.conf
+++ b/tmux.conf
@@ -120,8 +120,10 @@ set -g @continuum-boot 'on'
 # set -g @continuum-boot-options 'iterm'
 set -g @continuum-restore 'on'
 set -g @continuum-save-interval '5'
+set -g @continuum-systemd-start-cmd 'start-server'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session' #for Neo Vim
+
 
 # How to install other plugins from Github:
 # To install new plugins press: prefix + I
