Add VSCode setup and settings
- Update setup steps
  - Use a local ignored config for gitconfig
  - Add setup step which configures it
  - Remove Ruby and Server only setup

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,9 @@ atom/*
 !atom/snippets.cson
 !atom/styles.less
 
+Code/User/workspaceStorage/*
+Code/User/globalStorage/*
+
+gitconfig.local
 unison/*
 !unison/Stores.prf
