--- a/tmux.conf
+++ b/tmux.conf
@@ -21,8 +21,14 @@ set-window-option -g pane-base-index 1
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
+# Make mouse useful in copy mode
+setw -g mode-mouse on
+
+# Allow xterm titles in terminal window, terminal scrolling with scrollbar, and setting overrides of C-Up, C-Down, C-Left, C-Right
+set -g terminal-overrides "xterm*:XT:smcup@:rmcup@:kUP5=\eOA:kDN5=\eOB:kLFT5=\eOD:kRIT5=\eOC"
+
 # increase scrollback lines
-set -g history-limit 10000
+set -g history-limit 30000
 
 # switch to last pane
 bind-key C-a last-pane
